--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
         "baseUrl": ".",
+        "strictNullChecks": true,
         "paths": {
             "*": ["./src/*"]
         }
